--- a/specimin/build.gradle
+++ b/specimin/build.gradle
@@ -18,6 +18,7 @@ import net.ltgt.gradle.errorprone.CheckSeverity
 
 tasks.withType(JavaCompile) {
     options.errorprone {
+        disableAllChecks=true
         check('NullAway', CheckSeverity.ERROR)
         option('NullAway:AnnotatedPackages', 'com.github.benmanes.caffeine')
     }
