--- a/specimin/build.gradle
+++ b/specimin/build.gradle
@@ -19,7 +19,7 @@ import net.ltgt.gradle.errorprone.CheckSeverity
 tasks.withType(JavaCompile) {
     options.errorprone {
         disableAllChecks=true
-        check('NullAway', CheckSeverity.WARNING)
+        check('NullAway', CheckSeverity.WARN)
         option('NullAway:AnnotatedPackages', 'com.github.benmanes.caffeine.guava')
     }
 }
